--- a/package.json
+++ b/package.json
@@ -8,12 +8,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^13.5.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "eslint": "8.51.0",
-    "eslint-config-next": "13.5.6"
+    "next": "14.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
