--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
-  "name": "my-music-app",
+  "name": "toosii-tech-youtube-downloader",
   "version": "1.0.0",
+  "description": "YouTube Downloader by TOOSII TECH - Download MP4 and MP3 from YouTube",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,7 +11,23 @@
   },
   "dependencies": {
     "next": "14.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  }
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "ytdl-core": "^4.11.5"
+  },
+  "devDependencies": {
+    "eslint": "^8.0.0",
+    "eslint-config-next": "14.0.0"
+  },
+  "keywords": [
+    "youtube",
+    "downloader",
+    "mp3",
+    "mp4",
+    "video",
+    "audio",
+    "toosii-tech"
+  ],
+  "author": "TOOSII TECH",
+  "license": "MIT"
 }
