--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "next": "14.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "ytdl-core": "^4.11.5"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "eslint": "^8.0.0",
